--- a/index.html
+++ b/index.html
@@ -56,19 +56,34 @@
                     <div class="text">this is some subtext under an illustration or image</div>                    
                 </div>
             </div>
-
         </div>
 
         <div class="third-container">
+            <div class="top-text">
+                Your time is limited, so don't waste it living someone else's life. Don't be trapped by dogma - which is living with the results of other people's thinking.
+            </div>
+            <div class="bottom-text">
+                -Steve Jobs
+            </div>
 
         </div>
 
         <div class="fourth-container">
+            <div class="blue-box">
+                <div class="box-top-text">
+                    Call to action! It's time!
+                </div>
+                <div class="box-bottom-text">
+                    Sing up for out product by clicking that button right over here!
+                </div>
+            </div>
+            <button>Sing up</button>
 
         </div>
     </div>
 
     <div class="footer">
+        Copyright © Madprod Company 2022
 
     </div>
 </body>
