Edit class names in second container and add style to it

--- a/index.html
+++ b/index.html
@@ -36,23 +36,23 @@
         <div class="second-container">
             <h2>Random photos gallery</h2>
             <div class="gallery">
-                <div class="first-photo">
-                    <img src="" alt="">
+                <div class="photo">
+                    <img src="img/beach-g96adbc32d_1920.jpg" alt="A beach.">
                     <div class="text">this is some subtext under an illustration or image</div>                    
                 </div>
 
-                <div class="second-photo">
-                    <img src="" alt="">
+                <div class="photo">
+                    <img src="img/code-gcc360e170_1920.jpg" alt="Creating websites.">
                     <div class="text">this is some subtext under an illustration or image</div>                    
                 </div>
 
-                <div class="third-photo">
-                    <img src="" alt="">
+                <div class="photo">
+                    <img src="img/programming-1009134_960_720.jpg" alt="Creating websites.">
                     <div class="text">this is some subtext under an illustration or image</div>                    
                 </div>
 
-                <div class="fourth-photo">
-                    <img src="" alt="">
+                <div class="photo">
+                    <img src="img/website-ge76ba7454_1920.jpg" alt="A graphic on website on varius devices">
                     <div class="text">this is some subtext under an illustration or image</div>                    
                 </div>
             </div>
