Fix typos in index.html and add style to third section

--- a/index.html
+++ b/index.html
@@ -59,13 +59,14 @@
         </div>
 
         <div class="third-container">
-            <div class="top-text">
+            <div class="quote">
+             <div class="top-text">
                 Your time is limited, so don't waste it living someone else's life. Don't be trapped by dogma - which is living with the results of other people's thinking.
+             </div>
+             <div class="bottom-text">
+                - Steve Jobs
+             </div>
             </div>
-            <div class="bottom-text">
-                -Steve Jobs
-            </div>
-
         </div>
 
         <div class="fourth-container">
@@ -78,13 +79,11 @@
                 </div>
             </div>
             <button>Sing up</button>
-
         </div>
     </div>
 
     <div class="footer">
         Copyright © Madprod Company 2022
-
     </div>
 </body>
 
