Add style to fourth section and some minor features

--- a/index.html
+++ b/index.html
@@ -71,14 +71,17 @@
 
         <div class="fourth-container">
             <div class="blue-box">
+              <div class="box-text">
                 <div class="box-top-text">
                     Call to action! It's time!
                 </div>
                 <div class="box-bottom-text">
                     Sing up for out product by clicking that button right over here!
                 </div>
+              </div>
+            
+                <button>Sing up</button>
             </div>
-            <button>Sing up</button>
         </div>
     </div>
 
